Chore: 전체적으로 확인 및 initData(member3) 수정, css 이미지 뒤로 가게 수정